modify some configurations

--- a/Make.properties
+++ b/Make.properties
@@ -4,19 +4,21 @@
 
 MAKEFILE=Makefile
 # MAKE=make
-BASEDIR=C:/Users/jackchong/Work/Code/CPP/comspen
+BASEDIR=/home/mick/work/comspen
 
 # #################
 # directory layout
 # #################
 SRCDIR=$(BASEDIR)/src
 INCDIR=$(BASEDIR)/include
-SYS_INC=C:/Users/jackchong/mingw/MinGW/include
+
 Z3_INC=$(INCDIR)/z3
 LIBDIR=$(BASEDIR)/lib/
 DISTDIR=$(BASEDIR)/ComSpen
-LIB_DIR=/usr/local/lib
+
+# windows config
 Z3LIB_PATH=$(BASEDIR)/lib/libz3.lib
+SYS_INC=C:/Users/jackchong/mingw/MinGW/include
 
 # #################
 # complier flags
@@ -24,9 +26,12 @@ Z3LIB_PATH=$(BASEDIR)/lib/libz3.lib
 CC=g++
 MAKE=make
 
-F_INC=-I$(INCDIR) -I$(SYS_INC) -I$(Z3_INC)
+F_INC=-I$(INCDIR) -I$(Z3_INC) # -I$(SYS_INC)
 
-F_LIB=$(Z3LIB_PATH)
+F_LIB=-lz3 -L$(LIBDIR)   
+
+# windows config
+#F_LIB=$(Z3LIB_PATH)
 
 CFLAGS=-std=c++11 -g
 CPPFLAGS=$(CFLAGS) $(F_INC)
