--- a/Make.properties
+++ b/Make.properties
@@ -14,7 +14,7 @@ INCDIR=$(BASEDIR)/include
 
 Z3_INC=$(INCDIR)/z3
 LIBDIR=$(BASEDIR)/lib/
-DISTDIR=$(BASEDIR)/ComSpen
+DISTDIR=$(BASEDIR)/CompSpen
 
 # windows config
 Z3LIB_PATH=$(BASEDIR)/lib/libz3.lib
@@ -33,7 +33,7 @@ F_LIB=-lz3 -L$(LIBDIR)
 # windows config
 #F_LIB=$(Z3LIB_PATH)
 
-CFLAGS=-std=c++11 -g
+CFLAGS=-std=c++11 -g -Wno-return-type
 CPPFLAGS=$(CFLAGS) $(F_INC)
 
 # #################
